# frac-snft-ref-impl

./: .gitignore  Cargo.toml  Makefile  NOTICE  README.md
contracts/factory/: Cargo.toml
contracts/factory/examples/: schema.rs
contracts/factory/schema/: count_response.json
contracts/factory/src/: contract.rs  lib.rs  msg.rs  utest.rs
contracts/fractionalizer/: Cargo.toml  README.md
contracts/fractionalizer/examples/: schema.rs
contracts/fractionalizer/schema/: handle_msg.json  init_msg.json
contracts/fractionalizer/src/: contract.rs  lib.rs  msg.rs  receiver.rs  state.rs  utests.rs
contracts/fractionalizer/src/utests/: utest.rs  utest_handles.rs
contracts/ftoken/: Cargo.toml  README.md
contracts/ftoken/examples/: schema.rs
contracts/ftoken/schema/: ftoken_auth_query.json  ftoken_query.json  ftoken_query_answer.json  handle_answer.json  handle_msg.json  init_msg.json  query_msg.json  s721_handle_msg.json
contracts/ftoken/src/: contract.rs  lib.rs  msg.rs  state.rs  transaction_history.rs
contracts/ftoken/src/ftoken_mod/: handles.rs  mod.rs  msg.rs  queries.rs  state.rs
contracts/ftoken/src/ftoken_mod/ft_permit/: README.md  mod.rs  perm_funcs.rs  perm_state.rs  perm_structs.rs
fsnft/: Cargo.toml  Makefile  README.md
fsnft/examples/: schema.rs
fsnft/src/: contract.rs  msg.rs  state.rs
fsnft/tests/: integration.sh
fsnft/tests/snip721/: compile.md
fsnft_utils/: Cargo.toml
fsnft_utils/src/: lib.rs
fsnft_utils/tests/: integration.sh
ftoken/: Cargo.toml
int_tests/: Cargo.toml
int_tests/src/: helpers.rs  lib.rs  multitest.rs
int_tests/tests/: compile.md  helpers.ts  integration.sh  integration.ts  multitest.rs  package.json
int_tests/tests/int_types/: fractionalizer.ts  ftoken.ts  ftokenconf.ts  index.ts  metadata.ts  utils.ts
int_tests/tests/snip20/: compile.md
tests/: integration.sh
utils/: Cargo.toml
utils/src/: lib.rs
