[package]
name = "fsnft_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# This enables iterator functionality, as exposed in cosmwasm-std/iterator
# iterator = ["cosmwasm-std/iterator"]

[dependencies]
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
schemars = "0.7"
cosmwasm-std = { version = "0.10", package = "secret-cosmwasm-std" }
# cosmwasm-storage = { version = "0.10", package = "secret-cosmwasm-storage" }
secret-toolkit = { version = "0.2" } #, features = ["permit"] 

[dev-dependencies]
#cosmwasm-schema = "0.10.1"
